fixed min width issue of container on small screen prevents x overflow on small screens

--- a/app.css
+++ b/app.css
@@ -26,6 +26,7 @@ body {
 	box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 	transition: box-shadow 0.3s ease-in;
 	overflow: auto;
+	min-width: 382px;
 }
 
 .container:hover {
